# RINS_Project

dis_tutorial3/: CMakeLists.txt
dis_tutorial3/launch/: sim_turtlebot_nav.launch.py
dis_tutorial3/maps/: map1.pgm  map1.yaml
dis_tutorial3/scripts/: detect_people.py  detect_rings.py  map_goals.py  robot_commander.py  transform_point.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dis_tutorial3/share/dis_tutorial3/: local_setup.sh  package.sh
log/: latest_build
